# fix

./: .gitignore  README.md  SPEC.md  agent.py  client.py  contract.py  crypto.py  fix  fix.py  protocol.py  pyproject.toml  run_server.py  scrubber.py  test_sandbox.py  test_sandbox_e2e.py
.github/workflows/: publish.yml
contracts/: FixEscrow.sol  PLAN.md  state-machine.html
server/: __init__.py  app.py  escrow.py  judge.py  nano.py  reputation.py  store.py
server/static/: index.html
tests/: conftest.py  test_agent.py  test_app.py  test_chain_attacks.py  test_cli.py  test_client.py  test_client_signed.py  test_contract.py  test_crypto.py  test_escrow.py  test_judge.py  test_nano.py  test_nano_integration.py  test_reputation.py  test_scrubber.py  test_security.py  test_server.py
