[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fix-cli"
version = "0.1.0"
description = "AI-powered command fixer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Karan Sharma", email = "karans4@protonmail.com" },
]
dependencies = [
    "httpx>=0.24",
]

[project.scripts]
fix = "fix:main"

[tool.setuptools]
py-modules = ["fix"]
