[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fix-cli"
version = "0.6.0"
description = "AI-powered command fixer with contract-based dispute resolution"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    { name = "Karan Sharma", email = "karans4@protonmail.com" },
]
dependencies = [
    "httpx>=0.24",
    "cryptography>=41.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "starlette>=0.27",
    "ed25519-blake2b>=1.4",
    "requests>=2.28",
]

[project.scripts]
fix = "fix:main"

[tool.setuptools]
py-modules = ["fix", "protocol", "crypto", "contract", "scrubber", "client", "agent"]
packages = ["server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["nano: Nano dev network integration tests"]
